# barcelona-real-estate

./: README.md  aaagh.csv  combined_csv.csv  data_extractor.py  pyproject.toml  read_csv.py  results.csv  results_final.csv  table_extractor.py  test.csv  test.py
