[tool.poetry]
name = "barcelona-real-estate"
version = "0.1.0"
description = ""
authors = ["Guillaume Legoy <guillaume.legoy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.4"
beautifulsoup4 = "^4.9.3"
requests = "^2.25.1"
selenium = "^3.141.0"
unicodedata2 = "^13.0.0"
black = "^21.5b1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
